@@ -375,12 +375,14 @@ Could_not_import_entry_types=Could_not_import_entry_types
 Could_not_import_preferences=Could_not_import_preferences
 
 Could_not_instantiate_%0=Could_not_instantiate_%0
-Could_not_instantiate_%0_%1=Could_not_instantiate_%0_%1
+
 Could_not_instantiate_%0._Have_you_chosen_the_correct_package_path?=Could_not_instantiate_%0._Have_you_chosen_the_correct_package_path?
 Could_not_open_link=Could_not_open_link
 
 Could_not_parse_number_of_hits=Could_not_parse_number_of_hits
 Could_not_print_preview=Could_not_print_preview
+
+Could_not_resolve_import_format=Could_not_resolve_import_format
 
 Could_not_run_the_'gnuclient'_program._Make_sure_you_have_the_gnuserv/gnuclient_programs_installed.=Could_not_run_the_'gnuclient'_program._Make_sure_you_have_the_gnuserv/gnuclient_programs_installed.
 Could_not_run_the_'vim'_program.=Could_not_run_the_'vim'_program.
@@ -1143,7 +1145,7 @@ No_entries_or_multiple_entries_selected.=No_entries_or_multiple_entries_selected
 No_entries_selected=No_entries_selected
 No_entries_selected.=No_entries_selected.
 
-No_exceptions_have_ocurred.=No_exceptions_have_occurred.
+No_exceptions_have_ocurred.=No_exceptions_have_ocurred.
 No_files_found.=No_files_found.
 
 No_GUI._Only_process_command_line_options.=No_GUI._Only_process_command_line_options.
@@ -2218,6 +2220,7 @@ Marking_color_%0=Marking_color_%0
 The_name_'comment'_can_not_be_used_as_an_entry_type_name.=The_name_'comment'_can_not_be_used_as_an_entry_type_name.
 You_must_enter_an_integer_value_in_the_text_field_for=You_must_enter_an_integer_value_in_the_text_field_for
 File_directory=File_directory
+More_Information=More_Information
 Send_as_email=Send_as_email
 References=References
 Sending_of_emails=Sending_of_emails
@@ -2319,3 +2322,4 @@ Open_INSPIRE_entry=Open_INSPIRE_entry
 An_Error_occurred_while_fetching_from_INSPIRE_source_(%0)\:=An_Error_occurred_while_fetching_from_INSPIRE_source_(%0)\:
 Error_while_fetching_from_Inspire\:_=Error_while_fetching_from_Inspire\:_
 Web_search=Web_search
+Autocomplete_names=Autocomplete_names
